[package]
name = "timecat"
authors = ["Gourab Ghosh"]
version = "1.32.1"
edition = "2021"
homepage = "https://github.com/Gourab-Ghosh/timecat-rs/"
repository = "https://github.com/Gourab-Ghosh/timecat-rs/"
description = "A NNUE-based chess engine that implements the Negamax algorithm and can be integrated into any project as a library. It features move generation, advanced position evaluation through NNUE, and move searching capabilities."
documentation = "https://docs.rs/timecat"
license-file = "LICENSE"
# keywords = ["rust", "chess-engine", "chess", "uci", "alpha-beta-pruning", "negamax", "chess-ai", "uci-chess-engine", "nnue", "timecat", "timecat-rs"]
keywords = ["chess-engine", "chess", "uci", "nnue", "ai"]
# https://crates.io/category_slugs
categories = ["wasm", "algorithms", "games", "game-development"]
readme = "README.md"
include = [
    "src/",
    "tests/",
    "!src/**/*.bak",
    "build.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "documentation/**/*.md",
]
build = "build.rs"
default-run = "timecat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
debug = false
rpath = false
debug-assertions = false
overflow-checks = false
codegen-units = 1
lto = true
panic = "abort"
# rustflags = ["-C", "target-cpu=native"]
# strip = true

[dependencies]
arrayvec = "0"
binread = { version = "2", features = ["const_generics"], optional = true}
colored = { version = "2", optional = true }
itertools = "0"
paste = "1"
serde = { version = "1", features = ["derive"], optional = true }
web-time = { version = "1", optional = true }
gloo = { version = "0", optional = true }

[build-dependencies]
minreq = { version = "2", features = ["https"], optional = true }
sha256 = { version = "1", optional = true }
dirs = { version = "5", optional = true }

[dev-dependencies]
serde_json = "1"

[features]
# default = ["serde"]
# default = ["debug"]
# default = ["colored"]
default = ["inbuilt_nnue", "colored"]
binread = ["dep:binread"]
nnue_reader = ["binread"]
inbuilt_nnue = ["dep:minreq", "dep:sha256", "dep:dirs", "nnue_reader"]
extras = []
colored = ["dep:colored"]
serde = ["dep:serde", "web-time?/serde", "arrayvec/serde"]
wasm = ["dep:web-time", "dep:gloo"]
experimental = []
debug = ["experimental", "colored", "extras"]

[[bin]]
name = "timecat"
path = "src/bin/timecat.rs"

[package.metadata.docs.rs]
all-features = true
